Implement algorithm as described in paper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ endif()
 add_executable(
   run
   main.cpp
+  ConePlacer.h
+  ConePlacer.cpp
 )
 target_include_directories(run PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../include")
 target_link_libraries(run polyscope geometry-central)
