--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
 [submodule "deps/geometry-central"]
 	path = deps/geometry-central
-	url = https://github.com/MarkGillespie/geometry-central.git
+	url = git@github.com:nmwsharp/geometry-central.git
 	branch = v1
 [submodule "deps/polyscope"]
 	path = deps/polyscope
-	url = https://github.com/MarkGillespie/polyscope.git
+	url = git@github.com:nmwsharp/polyscope.git
 	branch = v02
 [submodule "deps/googletest"]
 	path = deps/googletest
-	url = https://github.com/google/googletest.git
+	url = git@github.com:google/googletest
